--- a/_manuscript/_tex/index.tex
+++ b/_manuscript/_tex/index.tex
@@ -197,7 +197,7 @@ Prediction During Early Recovery from Alcohol Use Disorder}
 
 
 \textsubscript{Source:
-\href{https://jjcurtin.github.io/study_messages/index-preview.html}{Article
+\href{https://jjcurtin.github.io/study_messages/index.qmd.html}{Article
 Notebook}}
 
 \section{Introduction}\label{introduction}
@@ -227,30 +227,29 @@ and whether new, important risk factors might emerge from sensing
 methods that passively collect smartphone data without user input.
 
 Cellular communication sensing may be one promising method. It offers
-the potential for greater temporal specificity in capturing fluctuations
-in risk compared with self-report data (e.g., as they occur
-vs.~prompting users to make reports the next day). Late night phonecalls
-could indicate an emergency, ``drunk dialing'', or other risk-relevant
-interactions. Cellular communications can also capture risk-relevant
-constructs more difficult for people to self report. A change in the
-number of unique contacts someone is interacting with could indicate an
-expanding or shrinking social circle.
+the potential for greater temporal specificity for capturing
+fluctuations in risk compared with self-report data (i.e., as it occurs
+vs.~prompting users to make reports the next day). Late night phone
+calls could indicate an emergency, ``drunk dialing'', or interpersonal
+conflict. It can also capture risk-relevant constructs difficult for
+people to self report, such as slow changing social patterns. A decrease
+in the number of contacts someone is communicating with could indicate a
+shrinking social circle, isolation, or disengagement.
 
-These passive data may become even more powerful when communications are
-contextualized with personal meaning for a given participant (e.g., Who
-is this contact to them? What is a typical interaction with them like?).
-In the above examples, contextualized communication data might reveal
-that the late-night phone call was to a sponsor, or that the shrinking
-social circle was due to reduced contact with people who are
-unsupportive of their recovery.
+These passive data may become more powerful still when communications
+are contextualized with personal meaning for a given participant (e.g.,
+Who is this contact to them?). In the above examples, contextualized
+communication data might reveal that late-night phone calls are to a
+sponsor or that a shrinking social circle is due to reduced contact with
+people unsupportive of their recovery.
 
 In this study, we evaluated the performance of a machine learning model
-that predicts the probability of a next-day alcohol lapse amobg
-individuals in early recovery from alcohol use disorder using
-contextualized cellular communication data. We also describe the most
-important features contributing to these predictions, with the goal of
-identifying new, clinically meaningful features emerging from
-communication-based sensing.
+that predicts the probability of a next-day alcohol lapse among
+individuals in early recovery from AUD using contextualized cellular
+communication data. We also describe the most important features
+contributing to these predictions, with the goal of identifying new,
+clinically meaningful features emerging from communication-based
+sensing.
 
 \section{Methods}\label{methods}
 
