--- a/_manuscript/_tex/index.tex
+++ b/_manuscript/_tex/index.tex
@@ -190,10 +190,39 @@ Sensing},
 \title{Evaluating Cellular Communication Sensing for Lapse Risk
 Prediction During Early Recovery from Alcohol Use Disorder}
 \author{Kendra Wyant \and Coco Yu \and John J. Curtin}
-\date{2025-12-26}
+\date{2026-01-11}
 
 \begin{document}
 \maketitle
+\begin{abstract}
+Alcohol Use Disorder (AUD) is a chronic, relapsing disease. An automated
+recovery support system powered by personal sensing and machine learning
+may assist with the inherently difficult task of identifying when and
+why an individual is at increased risk for lapse. Cellular communication
+sensing may be one promising method for detecting dynamic changes in
+lapse risk. Moreover, these communications can be contextualized with
+self-reported, risk-relevant information about the contact. In this
+study, we evaluated the performance of a machine learning model that
+predicts the probability of next-day alcohol lapse among individuals (N
+= 144) in early recovery from AUD using contextualized cellular
+communication data and baseline demographic and AUD characteristics. The
+best-performing model used an elastic net algorithm and retained 13
+features. The median posterior auROC for the best model was 0.68, with a
+relatively narrow 95\% Bayesian confidence interval (CI; {[}0.64,
+0.71{]}) that did not include 0.5. We also evaluated a comparison model
+to assess the incremental predictive value of cellular communication
+features beyond baseline measures. The baseline model retained five
+features and achieved performance nearly identical to that of the full
+model (median auROC = 0.68, 95\% CI {[}0.64, 0.71{]}). These results
+indicate that cellular communication data capture some risk-relevant
+signal for alcohol lapse; however, they do not provide incremental
+predictive value beyond a baseline model that includes only demographic
+and self-report measures. Several communication features were retained
+in the final model with moderately sized coefficients, suggesting that
+aspects of social communication may be important for understanding lapse
+risk. Nonetheless, limitations inherent to cellular communication as a
+sensing method may outweigh their added value.
+\end{abstract}
 
 
 \textsubscript{Source:
@@ -220,36 +249,51 @@ identifying when and why someone is at increased risk for lapse.
 Personal sensing of densely sampled data from individuals' day-to-day
 lives can provide the inputs necessary for temporally dynamic lapse
 predictions (Mohr et al., 2017). Early machine learning models using
-ecological momentary assessment data have achieved excellent accuracy
-(Chih et al., 2014; Wyant et al., 2024, under review). Still, questions
-remain about the long-term feasibility of self-report sensing methods
-and whether new, important risk factors might emerge from sensing
-methods that passively collect smartphone data without user input.
+ecological momentary assessment (EMA) data have achieved excellent
+accuracy in predicting future lapses back to alcohol use in treatment
+seeking populations (Chih et al., 2014; Wyant et al., 2024, under
+review).
 
-Cellular communication sensing may be one promising method. It offers
-the potential for greater temporal specificity for capturing
-fluctuations in risk compared with self-report data (i.e., as it occurs
-vs.~prompting users to make reports the next day). Late night phone
-calls could indicate an emergency, ``drunk dialing'', or interpersonal
-conflict. It can also capture risk-relevant constructs difficult for
-people to self report, such as slow changing social patterns. A decrease
-in the number of contacts someone is communicating with could indicate a
-shrinking social circle, isolation, or disengagement.
+Despite the high predictive success of EMA, questions remain about the
+long-term feasibility of a self-report sensing method. EMA has been
+shown to be well-tolerated among substance use populations over
+relatively short periods of time (Jones et al., 2019; Wyant et al.,
+2023). It is unclear whether individuals would be willing and able to
+adhere to an extensive EMA protocol (e.g., 4 prompts per day)
+indefinitely. Moreover, EMA items are chosen using domain expertise from
+decades of research on the self-report factors that predict lapse. It is
+possible, however, that there are several alternative precipitators of
+lapse not yet discovered due to small subtle changes in one's
+environment, social circle, or lifestyle that can be easily pinpointed
+in self-report.
 
-These passive data may become more powerful still when communications
-are contextualized with personal meaning for a given participant (e.g.,
-Who is this contact to them?). In the above examples, contextualized
-communication data might reveal that late-night phone calls are to a
-sponsor or that a shrinking social circle is due to reduced contact with
-people unsupportive of their recovery.
+Cellular communication sensing may be a promising alternative to EMA.
+Whereas EMA is limited to at most several assessments per day,
+communication sensing is mostly passive and can be monitored
+moment-by-moment. Cellular communication patterns also appear to capture
+clear, risk-relevant constructs. Late-night phone calls could indicate
+an emergency, ``drunk dialing,'' or interpersonal conflict. A decrease
+in the number of contacts an individual communicates with could reflect
+a shrinking social circle, isolation, or disengagement.
 
-In this study, we evaluated the performance of a machine learning model
-that predicts the probability of a next-day alcohol lapse among
-individuals in early recovery from AUD using contextualized cellular
-communication data. We also describe the most important features
-contributing to these predictions, with the goal of identifying new,
-clinically meaningful features emerging from communication-based
-sensing.
+These data may become even more powerful when communication patterns are
+contextualized with participant-specific meaning. For instance, knowing
+a participant's relationship to their contacts, whether they have
+previously drank alcohol with a given contact, or whether that contact
+supports their recovery goals could substantially alter interpretation.
+In the examples above, contextualized communication data might reveal
+that late-night calls are made to a sponsor, or that a shrinking social
+circle reflects reduced contact with individuals unsupportive of their
+recovery. In this way, the same communication patterns may reflect
+protective processes rather than increased lapse risk.
+
+In this study, we assessed whether contextualized cellular communication
+features contain clinically meaningful signals for predicting next-day
+alcohol lapse risk among individuals in early recovery from AUD. Using a
+machine learning model, we evaluated the predictive utility of these
+features and identified the most important communication features, with
+the goal of uncovering new, clinically meaningful predictors of lapse
+risk.
 
 \section{Methods}\label{methods}
 
@@ -260,11 +304,12 @@ We recruited adults in early recovery from AUD in Madison, Wisconsin,
 through print and digital advertisements and partnerships with treatment
 centers. Eligibility criteria required that participants were age 18 or
 older, able to read and write in English, had moderate to severe AUD
-\footnote{(≥4 self-reported DSM-5 symptoms)}, had been abstinent from
-alcohol for 1--8 weeks, were willing to use a single smartphone, and
-were not exhibiting severe psychosis or paranoia.\footnote{Defined as
-  scores \textgreater2.2 or 2.8, respectively, on the psychosis or
-  paranoia scales of the Symptom Checklist--90 (Derogatis, L.R., 2000).}
+\footnote{(≥4 self-reported DSM-5 symptoms)}, had a goal of abstinence
+from alcohol, had been abstinent for 1--8 weeks, were willing to use a
+single smartphone, and were not exhibiting severe psychosis or
+paranoia.\footnote{Defined as scores \textgreater2.2 or 2.8,
+  respectively, on the psychosis or paranoia scales of the Symptom
+  Checklist--90 (Derogatis, L.R., 2000).}
 
 Participants completed up to 5 study visits over approximately 3 months:
 a screening visit, intake visit, and 3 monthly follow-up visits. At
@@ -274,12 +319,22 @@ clinical characteristics (DSM-5 AUD symptom count, alcohol problems
 (Hurlbut \& Sher, 1992), and presence of psychological symptoms
 (Derogatis, L.R., 2000)). At intake we collected additional self-report
 data on abstinence self-efficacy (McKiernan et al., 2011), craving
-(Flannery et al., 1999), and recent recovery efforts. At each monthly
-follow-up, we downloaded cellular communication metadata (voice calls
-and SMS text message logs) from participants' smartphones. We identified
-important contacts (i.e., individuals they had communicated with at
-least twice by call or text in the past month) and asked 7 contextual
-questions about these contacts.
+(Flannery et al., 1999), and recent recovery efforts.
+
+At each monthly follow-up, we downloaded backups of participants'
+cellular communication metadata directly from their smartphones.
+Metadata included the phone number of the other party, the date and time
+of the communication, the origin of call or message (i.e., incoming or
+outgoing), whether the call was answered (voice calls only), and the
+duration of the call (voice calls only). During each follow-up visit,
+study staff identified important contacts. Contacts that participants
+communicated with at least twice by call or text in the past month were
+deemed important. For each important contact, participants answered 7
+contextual questions about their type of relationship, whether they ever
+drank alcohol with this person, the drinking status of the contact,
+expectations about whether the contact would drink in their presence,
+recovery status of contact, level of supportiveness of contact, and
+affective experiences with the contact.
 
 While enrolled, participants completed 4 brief daily ecological
 momentary assessments (7-10 questions). The first item assessed alcohol
@@ -289,34 +344,52 @@ interview. Additional sensing data streams and self-report measures were
 collected for the parent grant. The full study protocol is available on
 our Open Science Framework page (\url{https://osf.io/wgpz9/}).
 
-We screened 192 participants. Of these, 169 enrolled and 154 completed
-the first follow-up. Data from 10 participants were excluded due to loss
-of abstinence goals, careless responding, or unusually low compliance.
-The final analytic sample included 144 participants.
-
 \subsection{Data Analysis Plan}\label{data-analysis-plan}
 
 Our models predicted the probability of an alcohol lapse within a
 24-hour window. Predictions were generated daily at 4 a.m., beginning on
-participants' second study day and continuing for up to 3 months. In
-total, there were 11,507 labeled prediction windows across all
-participants.
+participants' second study day and continuing for up to 3 months.
+Participants reported the date and hour of the start and end time of any
+alcohol use on the first item of the EMA. Prediction windows were
+labeled as lapse if any alcohol use was reported in the 24-hour window.
+In total, there were 11,507 labeled prediction windows across all
+participants. Positive lapse labels were underrepresented (7.5\%;
+861/11,507).
 
-Features were engineered from all available data up to the start of each
-window.\footnote{We filtered the data to include only communications
-  with known context prior to feature engineering.} The full model
-included 406 features from cellular communication data plus 24 features
-from baseline self-report measures. We also evaluated a comparison model
-that used only the baseline features. Table~\ref{tbl-1} details the raw
-predictors and feature engineering procedures.
+We filtered the data to include only communications with known context
+(i.e., people with whom they communicated with at least twice in a month
+and whom they provided self-report context about). Cellular
+communication features were engineered from all available data up to the
+start of each window. We used six scoring epochs (6, 12, 24, 48, 72, and
+168 hours before the start of the prediction window) to create features.
+Within each scoring epoch we calculated two types of features: raw and
+difference features. Raw features represent the raw feature value
+calculated within a scoring epoch (e.g., the rate count of text messages
+during the 48 hours immediately preceding the start of the prediction
+window). Difference features capture participant-level changes from
+their baseline scores. Specifically, we subtracted each participant's
+mean score for each feature (using all available data prior to the
+prediction window) from the associated raw feature (e.g., the
+participant's average rate count of text messages across all time on
+study subtracted from the rate count in the preceding 48 hours).
+
+The full model included 406 features from cellular communication data
+plus 24 numeric or dummy-coded features from baseline self-report
+measures. We also evaluated a comparison model that used only the
+baseline features. Table~\ref{tbl-1} details the raw predictors, feature
+engineering procedures, and features included in the full vs.~baseline
+models. Other feature engineering steps performed during
+cross-validation included imputing missing values (median imputation for
+numeric features and mode imputation for nominal features) and removing
+zero and near-zero variance features as determined from held-in data.
 
 Candidate model configurations differed by algorithm (elastic net,
 random forest, XGBoost), outcome resampling method, and hyperparameter
 values. The best configuration for each model was selected using 6
 repeats of participant-grouped 5-fold cross-validation. Our performance
 metric was area under the receiver operating curve (auROC). Folds were
-stratified by a between-subject measure of our outcome (low lapsers: 0-9
-lapses; high lapsers: 10+ lapses).
+stratified so that all folds contained comparable proportions of
+individuals who lapsed frequently (i.e., 10+ times).
 
 We evaluated model performance with a Bayesian hierarchical generalized
 linear model. Posterior distributions with 95\% credible intervals (CI)
@@ -443,10 +516,18 @@ provided written informed consent.
 
 \subsection{Participants}\label{participants}
 
-Table~\ref{tbl-2} provides the demographic characterization of our
-sample. We obtained a total of 375,912 contextualized communications
-across participants. Participants had, on average, 2,610 communications
-(range = 109-14,225). 56\% of participants reported at least one lapse.
+We screened 192 participants. Of these, 169 enrolled and 154 completed
+the first follow-up visit. Data from 1 participant was excluded due to
+not reporting a goal of abstinence and lapsing multiple times a day
+every day on study. Data from 1 participant was excluded due to evidence
+of careless responding. Data from 1 participant was excluded due to poor
+compliance with EMA resulting in questionable lapse labels. Data from 7
+participants were excluded due to poor compliance providing
+communication data (i.e., deleting logs prior to download and/or not
+providing context information about important contacts). The final
+analytic sample included 144 participants. Table~\ref{tbl-2} provides
+the demographic characterization of our sample. 56\% of participants
+reported at least one lapse while on study.
 
 \begin{longtable}[]{@{}lrrlll@{}}
 
@@ -519,6 +600,14 @@ Widowed & 2 & 1.4 & & & \\
 \href{https://jjcurtin.github.io/study_messages/notebooks/mak_tables-preview.html\#cell-tbl-2}{Make
 All Tables for Main Manuscript}}
 
+\subsection{Communications}\label{communications}
+
+Participants had an average of 26 important contacts (range 2-113) that
+were contextualized with self-report information. We obtained a total of
+375,912 contextualized communications across participants. Participants
+had, on average, 2,610 contextualized communications (range =
+109-14,225) averaging to about 33 communications per day (range 3-278).
+
 \subsection{Model Evaluation}\label{model-evaluation}
 
 The median posterior auROC for the full model was 0.68, with relatively
@@ -537,7 +626,7 @@ baseline model retained 5 features and achieved performance nearly
 identical to the full model (median auROC = 0.68, 95\% CI {[}0.64,
 0.71{]}). The median difference in auROC between the full and baseline
 models was less than .01, providing no evidence (52\% probability) that
-their posterior distributions were meaningfully different.
+the full model performed better than the baseline model.
 
 \begin{figure}[H]
 
@@ -591,22 +680,38 @@ private messaging apps (e.g., WhatsApp, Signal) or social media
 platforms (e.g., Facebook Messenger, Instagram) as their primary
 communication method (McDowell et al., 2025). Therefore, our dataset
 likely missed a substantial portion of participants' communications.
-Future studies could explore whether data from these platforms yield
-stronger predictive signals.
+Notably, the communication features that were retained in the final
+model were scored over the longest scoring epochs (72 and 168 hours),
+suggesting that when more data are available (i.e., more communications)
+these features may be become more important. Future studies could
+explore whether increasing communication data from these alternative
+platforms yield stronger predictive signals.
 
 We cannot entirely dismiss the potential value of cellular communication
 data for risk prediction. For example, researchers have successfully
 incorporated communication data into models with other sensing data
-(e.g., accelerometer, geolocation, and device usage) to predict alcohol
-use episodes (S. Bae et al., 2017; S. W. Bae et al., 2023). However,
-even in these instances, the contribution of cellular communications is
-questionable and other sensing methods like geolocation appear to be
-more promising. Other practical challenges for collecting call and text
-message data further limit the feasibility of this sensing method (e.g.,
-Apple heavily restricts the collection of these data by apps in their
-app store). We conclude that other forms of social interaction
-characterization (e.g., engineering time spent with supportive contacts
-from geolocation data) are more worthwhile to pursue in future research.
+(e.g., accelerometer, geolocation, and device usage) to detect current
+(S. Bae et al., 2017) and predict future (S. W. Bae et al., 2023) heavy
+drinking episondes in non-treatment seeking young adult populations.
+However, even in these instances, the unique contribution of cellular
+communications is unclear. Some communication features, such as outgoing
+call duration and the number of outgoing calls emerged in the top 20
+important features for detecting current drinking episodes. Conversely,
+when predicting future drinking episodes, no communication features
+appeared in the top 20. Other sensing methods, like geolocation and
+accelerometer data, appeared to be more robustly important for both
+detection and prediction.
+
+Other practical challenges in collecting call and text message data
+further limit the feasibility of this sensing method. For example, we
+obtained participants' cellular communication data by downloading
+backups of their communication logs in person during their monthly
+follow-up visits. However, Apple heavily restricts apps in its app store
+from accessing call and text message data, making real-time sensing of
+communications challenging (if not impossible) for IOS users. We
+conclude that other forms of social interaction characterization (e.g.,
+engineering time spent with supportive contacts from geolocation data)
+are more worthwhile to pursue in future research.
 
 \newpage
 
@@ -670,6 +775,13 @@ Hurlbut, S. C., \& Sher, K. J. (1992). Assessing alcohol problems in
 college students. \emph{Journal of American College Health.},
 \emph{41}(2), 49--58.
 
+\bibitem[\citeproctext]{ref-jonesComplianceEcologicalMomentary2019}
+Jones, A., Remmerswaal, D., Verveer, I., Robinson, E., Franken, I. H.
+A., Wen, C. K. F., \& Field, M. (2019). Compliance with ecological
+momentary assessment protocols in substance users: A meta-analysis.
+\emph{Addiction (Abingdon, England)}, \emph{114}(4), 609--619.
+\url{https://doi.org/10/gfsjzg}
+
 \bibitem[\citeproctext]{ref-marlattRelapsePreventionSecond2007}
 Marlatt, G. A., \& Donovan, D. M. (Eds.). (2007). \emph{Relapse
 {Prevention}, {Second Edition}: {Maintenance Strategies} in the
@@ -715,6 +827,12 @@ University of Maryland, Baltimore County.
 Wyant, K., Fronk, G. E., Yu, C., Punturieri, C. E., \& Curtin, J. J.
 (under review). \emph{Forecasting {Risk} of {Alcohol Lapse} up to {Two
 Weeks} in {Advance} using {Time-lagged Machine Learning Models}}.
+
+\bibitem[\citeproctext]{ref-wyantAcceptabilityPersonalSensing2023}
+Wyant, K., Moshontz, H., Ward, S. B., Fronk, G. E., \& Curtin, J. J.
+(2023). Acceptability of {Personal Sensing Among People With Alcohol Use
+Disorder}: {Observational Study}. \emph{JMIR mHealth and uHealth},
+\emph{11}(1), e41833. \url{https://doi.org/10.2196/41833}
 
 \bibitem[\citeproctext]{ref-wyantMachineLearningModels2024}
 Wyant, K., Sant'Ana, S. J., Fronk, G. E., \& Curtin, J. J. (2024).
