--- a/index.qmd
+++ b/index.qmd
@@ -79,9 +79,9 @@ Alcohol Use Disorder (AUD) is a chronic, relapsing disease [@mclellanDrugDepende
 
 An automated recovery support system powered by personal sensing and machine learning may assist with the inherently difficult task of identifying when and why someone is at increased risk for lapse. Personal sensing of densely sampled data from individuals' day-to-day lives can provide the inputs necessary for temporally dynamic lapse predictions [@mohrPersonalSensingUnderstanding2017]. Early machine learning models using ecological momentary assessment (EMA) data have achieved excellent accuracy in predicting future lapses back to alcohol use in treatment seeking populations [@chihPredictiveModelingAddiction2014; @wyantMachineLearningModels2024; @wyantForecastingRiskAlcoholunderreview]. 
 
-Despite the high predictive success of EMA, questions remain about the long-term feasibility of a self-report sensing method. EMA has been shown to be well-tolerated among substance use populations over relatively short periods of time [@jonesComplianceEcologicalMomentary2019; @wyantAcceptabilityPersonalSensing2023]. It is unclear whether individuals would be willing and able to adhere to an extensive EMA protocol (e.g., 4 prompts per day) indefinitely. Moreover, EMA items are chosen using domain expertise from decades of research on the self-report factors that predict lapse. It is possible, however, that there are several alternative precipitators of lapse not yet discovered due to small subtle changes in one's environment, social circle, or lifestyle that can be easily pinpointed in self-report. 
+Despite the high predictive success of EMA, questions remain about the long-term feasibility of a self-report sensing method. EMA has been shown to be well-tolerated among substance use populations over relatively short periods of time [@jonesComplianceEcologicalMomentary2019; @wyantAcceptabilityPersonalSensing2023]. It is unclear whether individuals would be willing and able to adhere to an extensive EMA protocol (e.g., 4 prompts per day) indefinitely. Moreover, EMA items are chosen using domain expertise from decades of research on the self-report factors that predict lapse. It is possible, however, that there are several alternative precipitators of lapse not yet discovered due to small subtle changes in one's environment, social circle, or lifestyle that cannot be easily pinpointed in self-report. 
 
-Cellular communication sensing may be a promising alternative to EMA. Whereas EMA is limited to at most several assessments per day, communication sensing is mostly passive and can be monitored moment-by-moment. Cellular communication patterns also appear to capture clear, risk-relevant constructs. Late-night phone calls could indicate an emergency, “drunk dialing,” or interpersonal conflict. A decrease in the number of contacts an individual communicates with could reflect a shrinking social circle, isolation, or disengagement.
+Cellular communication sensing may be a promising alternative to EMA. Whereas EMA is limited to, at most, several assessments per day, communication sensing is mostly passive and can be monitored moment-by-moment. Cellular communication patterns also appear to capture clear, risk-relevant constructs. Late-night phone calls could indicate an emergency, “drunk dialing,” or interpersonal conflict. A decrease in the number of contacts an individual communicates with could reflect a shrinking social circle, isolation, or disengagement.
 
 These data may become even more powerful when communication patterns are contextualized with participant-specific meaning. For instance, knowing a participant’s relationship to their contacts, whether they have previously drank alcohol with a given contact, or whether that contact supports their recovery goals could substantially alter interpretation. In the examples above, contextualized communication data might reveal that late-night calls are made to a sponsor, or that a shrinking social circle reflects reduced contact with individuals unsupportive of their recovery. In this way, the same communication patterns may reflect protective processes rather than increased lapse risk.
 
