one additional elaboration

--- a/index.qmd
+++ b/index.qmd
@@ -163,7 +163,7 @@ Nonetheless, several communication features were retained in the final model wit
 
 Even with highly contextualized communication data, however, prediction may be limited by data sparsity. Many participants had few daily communications, and some had extended periods with no recorded interactions at all. Our study design may have further contributed to this limitation. We collected only phone and SMS text communications through the native smartphone app. In recent years, many individuals use private messaging apps (e.g., WhatsApp, Signal) or social media platforms (e.g., Facebook Messenger, Instagram) as their primary communication method [@mcdowellPreferencesAttitudesDigital2025]. Therefore, our dataset likely missed a substantial portion of participants' communications. Notably, the communication features that were retained in the final model were scored over the longest scoring epochs (72 and 168 hours), suggesting that when more data are available (i.e., more communications) these features may be become more important.<!--KW: John, I added this sentence but let me know if you think it needs more explanation or doesn't fit here.--> Future studies could explore whether increasing communication data from these alternative platforms yield stronger predictive signals.
 
-We cannot entirely dismiss the potential value of cellular communication data for risk prediction. For example, researchers have successfully incorporated communication data into models with other sensing data (e.g., accelerometer, geolocation, and device usage) to detect current [@baeDetectingDrinkingEpisodes2017] and predict future [@baeLeveragingMobilePhone2023] heavy drinking episondes in non-treatment seeking young adult populations. However, even in these instances, the unique contribution of cellular communications is unclear. Some communication features, such as outgoing call duration and the number of outgoing calls emerged in the top 20 important features for detecting current drinking episodes. Conversely, when predicting future drinking episodes, no communication features appeared in the top 20. Other sensing methods, like geolocation and accelerometer data, appeared to be more robustly important for both detection and prediction. 
+We cannot entirely dismiss the potential value of cellular communication data for risk prediction. For example, researchers have successfully incorporated communication data into models with other sensing data (e.g., accelerometer, geolocation, and device usage) to detect current [@baeDetectingDrinkingEpisodes2017] and predict future [@baeLeveragingMobilePhone2023] heavy drinking episondes in non-treatment seeking young adult populations. It is possible, that in certain populations cellular communications may hold more signal. Young adults may have more frequent communications reducing sparsity concerns. Additionally, non-treatment seeking populations may be less likely to sensor their data (i.e., deleting communications) when the drinking behavior is not at odds with their goals and/or values. However, even in these instances, the unique contribution of cellular communications above and beyond other sensing methods is unclear. Some communication features, such as outgoing call duration and the number of outgoing calls emerged in the top 20 important features for detecting current drinking episodes. Conversely, when predicting future drinking episodes, no communication features appeared in the top 20. Other sensing methods, like geolocation and accelerometer data, appeared to be more robustly important for both detection and prediction. 
 
 Other practical challenges in collecting call and text message data further limit the feasibility of this sensing method. For example, we obtained participants' cellular communication data by downloading backups of their communication logs in person during their monthly follow-up visits. However, Apple heavily restricts apps in its app store from accessing call and text message data, making real-time sensing of communications challenging (if not impossible) for IOS users. We conclude that other forms of social interaction characterization (e.g., engineering time spent with supportive contacts from geolocation data) are more worthwhile to pursue in future research.
 
